fixed items not showing on main, added temp unit, image size

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     width: 323px;
+    height: 326px;
     cursor: pointer;
 }
 
@@ -21,6 +22,8 @@
 
 .item-card__image{
     width: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
     border-radius: 10%;
     border: solid #000000 1px;
 }
